Edit docs and update some logic in wishlist ♥📃
