# back/controllers/userControllers.js
@@ -3,76 +3,90 @@ const bcrypt = require("bcrypt")
 const userServices = require("../services/userServices")
 
 
-module.exports.userRegister = async (req,res) => {
-    const { email, password , username, favoriteGenres, country, postalCode, phoneNumber } = req.body
-    
-    const result = await userServices.createUser( email, password, username, favoriteGenres, country, postalCode, phoneNumber)
+module.exports.userRegister = async (req, res) => {
+    const { email, password, username, favoriteGenres, country, postalCode, phoneNumber } = req.body
+
+    const result = await userServices.createUser(email, password, username, favoriteGenres, country, postalCode, phoneNumber)
 
     if (result.error) {
         if (result.error === "Email already exists") {
-            return res.status(400).json({ error: result.error})
+            return res.status(400).json({ error: result.error })
         } else {
-            return res.status(500).json({ error: result.error})
+            return res.status(500).json({ error: result.error })
         }
     }
 
-    return res.status(201).json({ message: result.message, user: result.user})
+    return res.status(201).json({ message: result.message, user: result.user })
 }
 
-module.exports.userUpdate = async (req,res) => {
-    const   id  = req.params.id
+module.exports.userUpdate = async (req, res) => {
+    const id = req.params.id
     const updateData = req.body
-        try{
-            const userUpdated = await userServices.updateUser(id,updateData)
-            res.status(200).json(userUpdated)
-        } catch(e){
-            res.status(400).json({ error: error.message})
-        }
+    try {
+        const userUpdated = await userServices.updateUser(id, updateData)
+        res.status(200).json(userUpdated)
+    } catch (e) {
+        res.status(400).json({ error: error.message })
+    }
 }
 
-module.exports.userDelete = async (req,res) =>{
+module.exports.userDelete = async (req, res) => {
     const { id } = req.params.id
 
     const result = await userServices.deleteUser(id)
 
     if (result.error) {
-        if (result.error === "User not found"){
-            return res.status(404).json({ error : result.error})
+        if (result.error === "User not found") {
+            return res.status(404).json({ error: result.error })
         } else {
-            return res.status(500).json({ error : result.error})
+            return res.status(500).json({ error: result.error })
         }
     }
-    
-    return res.status(200).json({ message: result.message})
+
+    return res.status(200).json({ message: result.message })
 }
 
-module.exports.addBookToWishList = async ( req,res ) =>{
-    const { bookId , userId } = req.body
+module.exports.addBookToWishList = async (req, res) => {
+    const userId = req.user.id
+    const { bookId } = req.body
+    try {
+        const wishList = await userServices.addToWishList(bookId, userId)
 
-    try{
-        const wishList = await userServices.addToWishList(bookId,userId)
-        res.status(200).json({ wishList})
+        if (wishList.error) {
+            return res.status(404).json(wishList)
+        }
+
+        res.status(201).json({ wishList })
     } catch (e) {
-        res.status(400).json({ error : error.message})
+        res.status(500).json({ error: error.message })
     }
 }
 
-module.exports.removeBookFromWishList = async ( req,res ) =>{
-    const { bookId , userId } = req.body
-    try{
+module.exports.removeBookFromWishList = async (req, res) => {
+    const userId = req.user.id
+    const { bookId } = req.body
+    try {
         const wishList = await userServices.removeFromWishList(bookId, userId)
+
+        if (wishList.error) {
+            return res.status(404).json(wishList)
+        }
         res.status(200).json({ wishList })
-    } catch (e){
-        res.status(400).json({ error : error.message})
+    } catch (e) {
+        res.status(500).json({ error: error.message })
     }
 }
 
-module.exports.getUserWishList = async ( req,res ) =>{
-    const { userId } = req.body
-    try{
+module.exports.getUserWishList = async (req, res) => {
+    const userId = req.user.id
+    try {
         const wishList = await userServices.getUserWishList(userId)
+
+        if (wishList.error) {
+            return res.status(404).json(wishList)
+        }
         res.status(200).json({ wishList })
-    } catch(e){
-        res.status(400).json({ error: error.message})
+    } catch (e) {
+        res.status(500).json({ error: error.message })
     }
 }
